--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -31,6 +31,7 @@
 @using MK.Accountancy.Currents
 @using MK.Accountancy.Blazor.Pages.Currents
 @using MK.Accountancy.Stores
+@using MK.Accountancy.Blazor.Pages.Stores
 @using MK.Accountancy.Terms
 @using MK.Accountancy.Blazor.Pages.Terms
 @using MK.Accountancy.Services
@@ -43,6 +44,8 @@
 @using MK.Accountancy.Blazor.Pages.Stocks
 @using MK.Accountancy.Departments
 @using MK.Accountancy.Blazor.Pages.Departments
+@using MK.Accountancy.Parameters
+@using MK.Accountancy.Blazor.Pages.Parameters
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
