--- a/src/MK.Blazor.Core/Components/DevComp/Layouts/DevPopupPageLayout.razor
+++ b/src/MK.Blazor.Core/Components/DevComp/Layouts/DevPopupPageLayout.razor
@@ -51,14 +51,14 @@
     [Parameter]
     public bool ActionButtonEnabled { get; set; }
     [Parameter]
-    public string ActionButtonIconCssClass { get; set; } = "pr-2 fas fa-check";
+    public string ActionButtonIconCssClass { get; set; } = "pe-2 fas fa-check";
     [Parameter]
     public bool ActionButtonVisible { get; set; } = false;
     [Parameter] public bool ApplyBackgroundShading { get; set; } = true;
     [Parameter]
     public bool CancelButtonVisible { get; set; } = true;
     [Parameter]
-    public string CancelButtonIconCssClass { get; set; } = "pr-2 fas fa-times-circle";
+    public string CancelButtonIconCssClass { get; set; } = "pe-2 fas fa-times-circle";
     [Parameter] public EventCallback<PopupClosedEventArgs> Closed { get; set; }
     [Parameter] public EventCallback<PopupClosingEventArgs> Closing { get; set; }
     [Parameter] public bool CloseOnEscape { get; set; } = true;
