--- a/src/MK.Accountancy.Blazor/_Imports.razor
+++ b/src/MK.Accountancy.Blazor/_Imports.razor
@@ -46,6 +46,7 @@
 @using MK.Accountancy.Blazor.Pages.Departments
 @using MK.Accountancy.Parameters
 @using MK.Accountancy.Blazor.Pages.Parameters
+@using MK.Accountancy.Invoices
 @using Blazorise
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
